crates/xlate/tests/snapshots/golden_matrix__instr_system_item_mid_input__gpt-4o-mini__20260910__responses_to_chat__gpt5_responses.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-5.4",
  "messages": [
    {
      "role": "user",
      "content": "Say hi."
    },
    {
      "role": "assistant",
      "content": "Hi."
    },
    {
      "role": "developer",
      "content": "From now on answer in French."
    },
    {
      "role": "user",
      "content": "How are you?"
    }
  ],
  "max_completion_tokens": 64
}
--- headers ---
upstream_streams: false
--- degraded ---
